# Shortcuts-Menu

./: .gitignore  CMakeLists.txt  CompileAndroid.bat  CompileAndroid32.bat  CompileAndroid64.bat  README.md  about.md  changelog.md  mod.json
.github/: build.yml
.github/workflows/: build.yml
src/: CCFunction.hpp  ChoiceSetting.cpp  ChoiceSetting.hpp  GameManager.hpp  Hooks.cpp  LayerHooks.cpp  ShortcutsLayer.cpp  ShortcutsLayer.hpp  ShortcutsPopup.cpp  ShortcutsPopup.hpp  main.cpp
src/Settings/: ChoiceSetting.cpp  ChoiceSetting.hpp
